parser_rules.output
Terminals unused in grammar

    case_statement
    as
    input_func
    bitwise_and_with_equals
    bitwise_or_with_equals
    bitwise_xor_with_equals
    bitwise_not_with_equals
    bitwise_shift_right_with_equals
    bitwise_shift_left_with_equals
    PREC_TERNARY_IDENT


State 21 conflicts: 1 shift/reduce
State 140 conflicts: 1 shift/reduce
State 219 conflicts: 19 shift/reduce
State 225 conflicts: 19 shift/reduce
State 244 conflicts: 19 shift/reduce


Grammar

    0 $accept: program $end

    1 program: statement
    2        | program statement

    3 statement: indicator_stmt
    4          | strategy_stmt
    5          | if_stmt
    6          | for_stmt
    7          | while_stmt
    8          | return_stmt_expr
    9          | break_stmt
   10          | continue_stmt
   11          | switch_stmt
   12          | varip_stmt
   13          | var_stmt
   14          | const_stmt
   15          | simple_stmt
   16          | func_stmt
   17          | call_arg_stmt
   18          | import_stmt
   19          | assignment_stmt
   20          | assignment_re_stmt
   21          | ternary_expr
   22          | compound_assign_stmt
   23          | ident_stmt

   24 ident_stmt: identifier

   25 block: left_brace stmt_list right_brace

   26 stmt_list: stmt_list stmt_block
   27          | stmt_block

   28 stmt_block: statement

   29 if_body: block
   30        | statement

   31 indicator_stmt: indicator_function left_paren string right_paren

   32 strategy_stmt: strategy_function left_paren string right_paren

   33 if_stmt: if_statement left_paren expr right_paren if_body
   34        | if_statement left_paren expr right_paren if_body else_statement if_body

   35 for_stmt: for_statement left_paren identifier assign expr to expr right_paren block
   36         | for_statement left_paren identifier assign expr to expr step expr right_paren block
   37         | for_statement left_paren expr right_paren block

   38 while_stmt: while_statement left_paren expr right_paren block

   39 func_stmt: identifier func_paren opt_arg_list func_paren block

   40 opt_arg_list: arg_list
   41             | ε

   42 arg_list: arg_list comma func_type
   43         | func_type

   44 func_type: pine_type identifier
   45          | pine_type
   46          | pine_type dot pine_type identifier
   47          | pine_type dot pine_type
   48          | pine_type lesser_than func_type greater_than identifier
   49          | pine_type dot pine_type lesser_than func_type greater_than identifier

   50 pine_type: int_type
   51          | bool_type
   52          | string_as_type
   53          | float_type
   54          | color_type
   55          | identifier

   56 return_stmt_expr: return_statement expr

   57 break_stmt: break_statement

   58 continue_stmt: continue_statement

   59 switch_stmt: switch_statement left_paren expr right_paren left_brace case_list default_case right_brace

   60 case_list: case_list case_stmt
   61          | ε

   62 case_stmt: expr left_brace switch_block_stmts right_brace semicolon

   63 default_case: default_statement left_brace switch_block_stmts right_brace semicolon
   64             | ε

   65 switch_block_stmt: statement

   66 switch_block_stmts: switch_block_stmt
   67                   | switch_block_stmts switch_block_stmt

   68 dot_expr: pine_type dot identifier

   69 call_arg_stmt: identifier left_paren call_list right_paren
   70              | dot_expr left_paren call_list right_paren

   71 call_list: call_stmt
   72          | call_list comma call_stmt
   73          | ε

   74 call_stmt: expr

   75 var_stmt: var identifier assign expr
   76         | var identifier assign call_arg_stmt

   77 varip_stmt: varip identifier assign expr
   78           | varip identifier
   79           | varip identifier assign call_arg_stmt

   80 const_stmt: const_statement identifier assign expr
   81           | const_statement identifier assign call_arg_stmt

   82 simple_stmt: simple identifier
   83            | simple identifier assign expr
   84            | simple identifier assign call_arg_stmt

   85 import_stmt: import_statement string

   86 assignment_stmt: identifier assign expr
   87                | identifier assign call_arg_stmt
   88                | dot_expr assign expr
   89                | dot_expr assign call_arg_stmt

   90 assignment_re_stmt: identifier re_assign expr
   91                   | identifier re_assign call_arg_stmt
   92                   | dot_expr re_assign expr
   93                   | dot_expr re_assign call_arg_stmt

   94 compound_assign_stmt: identifier plus_and_assign expr
   95                     | identifier minus_and_assign expr
   96                     | identifier multiply_and_assign expr
   97                     | identifier divide_and_assign expr
   98                     | identifier remind_and_assign expr
   99                     | dot_expr plus_and_assign expr
  100                     | dot_expr minus_and_assign expr
  101                     | dot_expr multiply_and_assign expr
  102                     | dot_expr divide_and_assign expr
  103                     | dot_expr remind_and_assign expr

  104 ternary_expr: identifier question_sign expr colon expr
  105             | dot_expr question_sign expr colon expr
  106             | left_paren expr right_paren question_sign expr colon expr

  107 expr: ternary_expr
  108     | number
  109     | string
  110     | expr plus expr
  111     | expr minus expr
  112     | expr multiply expr
  113     | expr divide expr
  114     | expr divide_with_remind expr
  115     | expr logical_and expr
  116     | expr logical_or expr
  117     | expr equals expr
  118     | expr dont_equal expr
  119     | expr greater_than expr
  120     | expr lesser_than expr
  121     | expr greater_than_or_equals expr
  122     | expr lesser_than_or_equals expr
  123     | expr bitwise_and expr
  124     | expr bitwise_or expr
  125     | expr bitwise_xor expr
  126     | expr bitwise_shift_to_left expr
  127     | expr bitwise_shift_to_right expr
  128     | logical_not expr
  129     | bitwise_not expr
  130     | minus expr
  131     | plus expr
  132     | left_paren expr right_paren
  133     | expr left_quad_brace expr right_quad_brace
  134     | left_quad_brace expr right_quad_brace
  135     | dot_expr
  136     | identifier


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    LOWEST_PREC (258)
    indicator_function (259) 31
    strategy_function (260) 32
    if_statement (261) 33 34
    else_statement (262) 34
    for_statement (263) 35 36 37
    step (264) 36
    to (265) 35 36
    return_statement (266) 56
    while_statement (267) 38
    break_statement (268) 57
    continue_statement (269) 58
    switch_statement (270) 59
    case_statement (271)
    default_statement (272) 63
    var (273) 75 76
    varip (274) 77 78 79
    const_statement (275) 80 81
    simple (276) 82 83 84
    logical_and (277) 115
    logical_or (278) 116
    logical_not (279) 128
    dont_equal (280) 118
    question_sign (281) 104 105 106
    bitwise_and (282) 123
    bitwise_or (283) 124
    bitwise_xor (284) 125
    bitwise_not (285) 129
    bitwise_shift_to_left (286) 126
    bitwise_shift_to_right (287) 127
    semicolon (288) 62 63
    import_statement (289) 85
    as (290)
    input_func (291)
    int_type <ival> (292) 50
    bool_type <ival> (293) 51
    float_type <ival> (294) 53
    color_type <ival> (295) 54
    string_as_type <ival> (296) 52
    left_paren (297) 31 32 33 34 35 36 37 38 59 69 70 106 132
    right_paren (298) 31 32 33 34 35 36 37 38 59 69 70 106 132
    func_paren (299) 39
    left_quad_brace (300) 133 134
    right_quad_brace (301) 133 134
    left_brace (302) 25 59 62 63
    right_brace (303) 25 59 62 63
    assign (304) 35 36 75 76 77 79 80 81 83 84 86 87 88 89
    re_assign (305) 90 91 92 93
    equals (306) 117
    greater_than (307) 48 49 119
    lesser_than (308) 48 49 120
    plus_and_assign (309) 94 99
    minus_and_assign (310) 95 100
    multiply_and_assign (311) 96 101
    divide_and_assign (312) 97 102
    remind_and_assign (313) 98 103
    plus (314) 110 131
    minus (315) 111 130
    multiply (316) 112
    divide (317) 113
    divide_with_remind (318) 114
    greater_than_or_equals (319) 121
    lesser_than_or_equals (320) 122
    bitwise_and_with_equals (321)
    bitwise_or_with_equals (322)
    bitwise_xor_with_equals (323)
    bitwise_not_with_equals (324)
    bitwise_shift_right_with_equals (325)
    bitwise_shift_left_with_equals (326)
    comma (327) 42 72
    dot (328) 46 47 49 68
    colon (329) 104 105 106
    number <ival> (330) 108
    identifier <sval> (331) 24 35 36 39 44 46 48 49 55 68 69 75 76 77 78 79 80 81 82 83 84 86 87 90 91 94 95 96 97 98 104 136
    string <sval> (332) 31 32 85 109
    PREC_SINGLE_NAME (333)
    PREC_TYPE_NAME (334)
    PREC_FUNC (335)
    PREC_CALL (336)
    PREC_TERNARY_IDENT (337)


Nonterminals, with rules where they appear

    $accept (83)
        on left: 0
    program <node> (84)
        on left: 1 2
        on right: 0 2
    statement <node> (85)
        on left: 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23
        on right: 1 2 28 30 65
    ident_stmt <node> (86)
        on left: 24
        on right: 23
    block <node> (87)
        on left: 25
        on right: 29 35 36 37 38 39
    stmt_list <node> (88)
        on left: 26 27
        on right: 25 26
    stmt_block <node> (89)
        on left: 28
        on right: 26 27
    if_body <node> (90)
        on left: 29 30
        on right: 33 34
    indicator_stmt <node> (91)
        on left: 31
        on right: 3
    strategy_stmt <node> (92)
        on left: 32
        on right: 4
    if_stmt <node> (93)
        on left: 33 34
        on right: 5
    for_stmt <node> (94)
        on left: 35 36 37
        on right: 6
    while_stmt <node> (95)
        on left: 38
        on right: 7
    func_stmt <node> (96)
        on left: 39
        on right: 16
    opt_arg_list <node> (97)
        on left: 40 41
        on right: 39
    arg_list <node> (98)
        on left: 42 43
        on right: 40 42
    func_type <node> (99)
        on left: 44 45 46 47 48 49
        on right: 42 43 48 49
    pine_type <sval> (100)
        on left: 50 51 52 53 54 55
        on right: 44 45 46 47 48 49 68
    return_stmt_expr <node> (101)
        on left: 56
        on right: 8
    break_stmt <node> (102)
        on left: 57
        on right: 9
    continue_stmt <node> (103)
        on left: 58
        on right: 10
    switch_stmt <node> (104)
        on left: 59
        on right: 11
    case_list <node> (105)
        on left: 60 61
        on right: 59 60
    case_stmt <node> (106)
        on left: 62
        on right: 60
    default_case <node> (107)
        on left: 63 64
        on right: 59
    switch_block_stmt <node> (108)
        on left: 65
        on right: 66 67
    switch_block_stmts <node> (109)
        on left: 66 67
        on right: 62 63 67
    dot_expr <node> (110)
        on left: 68
        on right: 70 88 89 92 93 99 100 101 102 103 105 135
    call_arg_stmt <node> (111)
        on left: 69 70
        on right: 17 76 79 81 84 87 89 91 93
    call_list <node> (112)
        on left: 71 72 73
        on right: 69 70 72
    call_stmt <node> (113)
        on left: 74
        on right: 71 72
    var_stmt <node> (114)
        on left: 75 76
        on right: 13
    varip_stmt <node> (115)
        on left: 77 78 79
        on right: 12
    const_stmt <node> (116)
        on left: 80 81
        on right: 14
    simple_stmt <node> (117)
        on left: 82 83 84
        on right: 15
    import_stmt <node> (118)
        on left: 85
        on right: 18
    assignment_stmt <node> (119)
        on left: 86 87 88 89
        on right: 19
    assignment_re_stmt <node> (120)
        on left: 90 91 92 93
        on right: 20
    compound_assign_stmt <node> (121)
        on left: 94 95 96 97 98 99 100 101 102 103
        on right: 22
    ternary_expr <node> (122)
        on left: 104 105 106
        on right: 21 107
    expr <node> (123)
        on left: 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128 129 130 131 132 133 134 135 136
        on right: 33 34 35 36 37 38 56 59 62 74 75 77 80 83 86 88 90 92 94 95 96 97 98 99 100 101 102 103 104 105 106 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128 129 130 131 132 133 134


State 0

    0 $accept: • program $end

    indicator_function  shift, and go to state 1
    strategy_function   shift, and go to state 2
    if_statement        shift, and go to state 3
    for_statement       shift, and go to state 4
    return_statement    shift, and go to state 5
    while_statement     shift, and go to state 6
    break_statement     shift, and go to state 7
    continue_statement  shift, and go to state 8
    switch_statement    shift, and go to state 9
    var                 shift, and go to state 10
    varip               shift, and go to state 11
    const_statement     shift, and go to state 12
    simple              shift, and go to state 13
    import_statement    shift, and go to state 14
    int_type            shift, and go to state 15
    bool_type           shift, and go to state 16
    float_type          shift, and go to state 17
    color_type          shift, and go to state 18
    string_as_type      shift, and go to state 19
    left_paren          shift, and go to state 20
    identifier          shift, and go to state 21

    program               go to state 22
    statement             go to state 23
    ident_stmt            go to state 24
    indicator_stmt        go to state 25
    strategy_stmt         go to state 26
    if_stmt               go to state 27
    for_stmt              go to state 28
    while_stmt            go to state 29
    func_stmt             go to state 30
    pine_type             go to state 31
    return_stmt_expr      go to state 32
    break_stmt            go to state 33
    continue_stmt         go to state 34
    switch_stmt           go to state 35
    dot_expr              go to state 36
    call_arg_stmt         go to state 37
    var_stmt              go to state 38
    varip_stmt            go to state 39
    const_stmt            go to state 40
    simple_stmt           go to state 41
    import_stmt           go to state 42
    assignment_stmt       go to state 43
    assignment_re_stmt    go to state 44
    compound_assign_stmt  go to state 45
    ternary_expr          go to state 46


State 1

   31 indicator_stmt: indicator_function • left_paren string right_paren

    left_paren  shift, and go to state 47


State 2

   32 strategy_stmt: strategy_function • left_paren string right_paren

    left_paren  shift, and go to state 48


State 3

   33 if_stmt: if_statement • left_paren expr right_paren if_body
   34        | if_statement • left_paren expr right_paren if_body else_statement if_body

    left_paren  shift, and go to state 49


State 4

   35 for_stmt: for_statement • left_paren identifier assign expr to expr right_paren block
   36         | for_statement • left_paren identifier assign expr to expr step expr right_paren block
   37         | for_statement • left_paren expr right_paren block

    left_paren  shift, and go to state 50


State 5

   56 return_stmt_expr: return_statement • expr

    logical_not      shift, and go to state 51
    bitwise_not      shift, and go to state 52
    int_type         shift, and go to state 15
    bool_type        shift, and go to state 16
    float_type       shift, and go to state 17
    color_type       shift, and go to state 18
    string_as_type   shift, and go to state 19
    left_paren       shift, and go to state 53
    left_quad_brace  shift, and go to state 54
    plus             shift, and go to state 55
    minus            shift, and go to state 56
    number           shift, and go to state 57
    identifier       shift, and go to state 58
    string           shift, and go to state 59

    pine_type     go to state 31
    dot_expr      go to state 60
    ternary_expr  go to state 61
    expr          go to state 62


State 6

   38 while_stmt: while_statement • left_paren expr right_paren block

    left_paren  shift, and go to state 63


State 7

   57 break_stmt: break_statement •

    $default  reduce using rule 57 (break_stmt)


State 8

   58 continue_stmt: continue_statement •

    $default  reduce using rule 58 (continue_stmt)


State 9

   59 switch_stmt: switch_statement • left_paren expr right_paren left_brace case_list default_case right_brace

    left_paren  shift, and go to state 64


State 10

   75 var_stmt: var • identifier assign expr
   76         | var • identifier assign call_arg_stmt

    identifier  shift, and go to state 65


State 11

   77 varip_stmt: varip • identifier assign expr
   78           | varip • identifier
   79           | varip • identifier assign call_arg_stmt

    identifier  shift, and go to state 66


State 12

   80 const_stmt: const_statement • identifier assign expr
   81           | const_statement • identifier assign call_arg_stmt

    identifier  shift, and go to state 67


State 13

   82 simple_stmt: simple • identifier
   83            | simple • identifier assign expr
   84            | simple • identifier assign call_arg_stmt

    identifier  shift, and go to state 68


State 14

   85 import_stmt: import_statement • string

    string  shift, and go to state 69


State 15

   50 pine_type: int_type •

    $default  reduce using rule 50 (pine_type)


State 16

   51 pine_type: bool_type •

    $default  reduce using rule 51 (pine_type)


State 17

   53 pine_type: float_type •

    $default  reduce using rule 53 (pine_type)


State 18

   54 pine_type: color_type •

    $default  reduce using rule 54 (pine_type)


State 19

   52 pine_type: string_as_type •

    $default  reduce using rule 52 (pine_type)


State 20

  106 ternary_expr: left_paren • expr right_paren question_sign expr colon expr

    logical_not      shift, and go to state 51
    bitwise_not      shift, and go to state 52
    int_type         shift, and go to state 15
    bool_type        shift, and go to state 16
    float_type       shift, and go to state 17
    color_type       shift, and go to state 18
    string_as_type   shift, and go to state 19
    left_paren       shift, and go to state 53
    left_quad_brace  shift, and go to state 54
    plus             shift, and go to state 55
    minus            shift, and go to state 56
    number           shift, and go to state 57
    identifier       shift, and go to state 58
    string           shift, and go to state 59

    pine_type     go to state 31
    dot_expr      go to state 60
    ternary_expr  go to state 61
    expr          go to state 70


State 21

   24 ident_stmt: identifier •
   39 func_stmt: identifier • func_paren opt_arg_list func_paren block
   55 pine_type: identifier •
   69 call_arg_stmt: identifier • left_paren call_list right_paren
   86 assignment_stmt: identifier • assign expr
   87                | identifier • assign call_arg_stmt
   90 assignment_re_stmt: identifier • re_assign expr
   91                   | identifier • re_assign call_arg_stmt
   94 compound_assign_stmt: identifier • plus_and_assign expr
   95                     | identifier • minus_and_assign expr
   96                     | identifier • multiply_and_assign expr
   97                     | identifier • divide_and_assign expr
   98                     | identifier • remind_and_assign expr
  104 ternary_expr: identifier • question_sign expr colon expr

    question_sign        shift, and go to state 71
    left_paren           shift, and go to state 72
    func_paren           shift, and go to state 73
    assign               shift, and go to state 74
    re_assign            shift, and go to state 75
    plus_and_assign      shift, and go to state 76
    minus_and_assign     shift, and go to state 77
    multiply_and_assign  shift, and go to state 78
    divide_and_assign    shift, and go to state 79
    remind_and_assign    shift, and go to state 80

    left_paren  [reduce using rule 24 (ident_stmt)]
    dot         reduce using rule 55 (pine_type)
    $default    reduce using rule 24 (ident_stmt)


State 22

    0 $accept: program • $end
    2 program: program • statement

    $end                shift, and go to state 81
    indicator_function  shift, and go to state 1
    strategy_function   shift, and go to state 2
    if_statement        shift, and go to state 3
    for_statement       shift, and go to state 4
    return_statement    shift, and go to state 5
    while_statement     shift, and go to state 6
    break_statement     shift, and go to state 7
    continue_statement  shift, and go to state 8
    switch_statement    shift, and go to state 9
    var                 shift, and go to state 10
    varip               shift, and go to state 11
    const_statement     shift, and go to state 12
    simple              shift, and go to state 13
    import_statement    shift, and go to state 14
    int_type            shift, and go to state 15
    bool_type           shift, and go to state 16
    float_type          shift, and go to state 17
    color_type          shift, and go to state 18
    string_as_type      shift, and go to state 19
    left_paren          shift, and go to state 20
    identifier          shift, and go to state 21

    statement             go to state 82
    ident_stmt            go to state 24
    indicator_stmt        go to state 25
    strategy_stmt         go to state 26
    if_stmt               go to state 27
    for_stmt              go to state 28
    while_stmt            go to state 29
    func_stmt             go to state 30
    pine_type             go to state 31
    return_stmt_expr      go to state 32
    break_stmt            go to state 33
    continue_stmt         go to state 34
    switch_stmt           go to state 35
    dot_expr              go to state 36
    call_arg_stmt         go to state 37
    var_stmt              go to state 38
    varip_stmt            go to state 39
    const_stmt            go to state 40
    simple_stmt           go to state 41
    import_stmt           go to state 42
    assignment_stmt       go to state 43
    assignment_re_stmt    go to state 44
    compound_assign_stmt  go to state 45
    ternary_expr          go to state 46


State 23

    1 program: statement •

    $default  reduce using rule 1 (program)


State 24

   23 statement: ident_stmt •

    $default  reduce using rule 23 (statement)


State 25

    3 statement: indicator_stmt •

    $default  reduce using rule 3 (statement)


State 26

    4 statement: strategy_stmt •

    $default  reduce using rule 4 (statement)


State 27

    5 statement: if_stmt •

    $default  reduce using rule 5 (statement)


State 28

    6 statement: for_stmt •

    $default  reduce using rule 6 (statement)


State 29

    7 statement: while_stmt •

    $default  reduce using rule 7 (statement)


State 30

   16 statement: func_stmt •

    $default  reduce using rule 16 (statement)


State 31

   68 dot_expr: pine_type • dot identifier

    dot  shift, and go to state 83


State 32

    8 statement: return_stmt_expr •

    $default  reduce using rule 8 (statement)


State 33

    9 statement: break_stmt •

    $default  reduce using rule 9 (statement)


State 34

   10 statement: continue_stmt •

    $default  reduce using rule 10 (statement)


State 35

   11 statement: switch_stmt •

    $default  reduce using rule 11 (statement)


State 36

   70 call_arg_stmt: dot_expr • left_paren call_list right_paren
   88 assignment_stmt: dot_expr • assign expr
   89                | dot_expr • assign call_arg_stmt
   92 assignment_re_stmt: dot_expr • re_assign expr
   93                   | dot_expr • re_assign call_arg_stmt
   99 compound_assign_stmt: dot_expr • plus_and_assign expr
  100                     | dot_expr • minus_and_assign expr
  101                     | dot_expr • multiply_and_assign expr
  102                     | dot_expr • divide_and_assign expr
  103                     | dot_expr • remind_and_assign expr
  105 ternary_expr: dot_expr • question_sign expr colon expr

    question_sign        shift, and go to state 84
    left_paren           shift, and go to state 85
    assign               shift, and go to state 86
    re_assign            shift, and go to state 87
    plus_and_assign      shift, and go to state 88
    minus_and_assign     shift, and go to state 89
    multiply_and_assign  shift, and go to state 90
    divide_and_assign    shift, and go to state 91
    remind_and_assign    shift, and go to state 92


State 37

   17 statement: call_arg_stmt •

    $default  reduce using rule 17 (statement)


State 38

   13 statement: var_stmt •

    $default  reduce using rule 13 (statement)


State 39

   12 statement: varip_stmt •

    $default  reduce using rule 12 (statement)


State 40

   14 statement: const_stmt •

    $default  reduce using rule 14 (statement)


State 41

   15 statement: simple_stmt •

    $default  reduce using rule 15 (statement)


State 42

   18 statement: import_stmt •

    $default  reduce using rule 18 (statement)


State 43

   19 statement: assignment_stmt •

    $default  reduce using rule 19 (statement)


State 44

   20 statement: assignment_re_stmt •

    $default  reduce using rule 20 (statement)


State 45

   22 statement: compound_assign_stmt •

    $default  reduce using rule 22 (statement)


State 46

   21 statement: ternary_expr •

    $default  reduce using rule 21 (statement)


State 47

   31 indicator_stmt: indicator_function left_paren • string right_paren

    string  shift, and go to state 93


State 48

   32 strategy_stmt: strategy_function left_paren • string right_paren

    string  shift, and go to state 94


State 49

   33 if_stmt: if_statement left_paren • expr right_paren if_body
   34        | if_statement left_paren • expr right_paren if_body else_statement if_body

    logical_not      shift, and go to state 51
    bitwise_not      shift, and go to state 52
    int_type         shift, and go to state 15
    bool_type        shift, and go to state 16
    float_type       shift, and go to state 17
    color_type       shift, and go to state 18
    string_as_type   shift, and go to state 19
    left_paren       shift, and go to state 53
    left_quad_brace  shift, and go to state 54
    plus             shift, and go to state 55
    minus            shift, and go to state 56
    number           shift, and go to state 57
    identifier       shift, and go to state 58
    string           shift, and go to state 59

    pine_type     go to state 31
    dot_expr      go to state 60
    ternary_expr  go to state 61
    expr          go to state 95


State 50

   35 for_stmt: for_statement left_paren • identifier assign expr to expr right_paren block
   36         | for_statement left_paren • identifier assign expr to expr step expr right_paren block
   37         | for_statement left_paren • expr right_paren block

    logical_not      shift, and go to state 51
    bitwise_not      shift, and go to state 52
    int_type         shift, and go to state 15
    bool_type        shift, and go to state 16
    float_type       shift, and go to state 17
    color_type       shift, and go to state 18
    string_as_type   shift, and go to state 19
    left_paren       shift, and go to state 53
    left_quad_brace  shift, and go to state 54
    plus             shift, and go to state 55
    minus            shift, and go to state 56
    number           shift, and go to state 57
    identifier       shift, and go to state 96
    string           shift, and go to state 59

    pine_type     go to state 31
    dot_expr      go to state 60
    ternary_expr  go to state 61
    expr          go to state 97


State 51

  128 expr: logical_not • expr

    logical_not      shift, and go to state 51
    bitwise_not      shift, and go to state 52
    int_type         shift, and go to state 15
    bool_type        shift, and go to state 16
    float_type       shift, and go to state 17
    color_type       shift, and go to state 18
    string_as_type   shift, and go to state 19
    left_paren       shift, and go to state 53
    left_quad_brace  shift, and go to state 54
    plus             shift, and go to state 55
    minus            shift, and go to state 56
    number           shift, and go to state 57
    identifier       shift, and go to state 58
    string           shift, and go to state 59

    pine_type     go to state 31
    dot_expr      go to state 60
    ternary_expr  go to state 61
    expr          go to state 98


State 52

  129 expr: bitwise_not • expr

    logical_not      shift, and go to state 51
    bitwise_not      shift, and go to state 52
    int_type         shift, and go to state 15
    bool_type        shift, and go to state 16
    float_type       shift, and go to state 17
    color_type       shift, and go to state 18
    string_as_type   shift, and go to state 19
    left_paren       shift, and go to state 53
    left_quad_brace  shift, and go to state 54
    plus             shift, and go to state 55
    minus            shift, and go to state 56
    number           shift, and go to state 57
    identifier       shift, and go to state 58
    string           shift, and go to state 59

    pine_type     go to state 31
    dot_expr      go to state 60
    ternary_expr  go to state 61
    expr          go to state 99


State 53

  106 ternary_expr: left_paren • expr right_paren question_sign expr colon expr
  132 expr: left_paren • expr right_paren

    logical_not      shift, and go to state 51
    bitwise_not      shift, and go to state 52
    int_type         shift, and go to state 15
    bool_type        shift, and go to state 16
    float_type       shift, and go to state 17
    color_type       shift, and go to state 18
    string_as_type   shift, and go to state 19
    left_paren       shift, and go to state 53
    left_quad_brace  shift, and go to state 54
    plus             shift, and go to state 55
    minus            shift, and go to state 56
    number           shift, and go to state 57
    identifier       shift, and go to state 58
    string           shift, and go to state 59

    pine_type     go to state 31
    dot_expr      go to state 60
    ternary_expr  go to state 61
    expr          go to state 100


State 54

  134 expr: left_quad_brace • expr right_quad_brace

    logical_not      shift, and go to state 51
    bitwise_not      shift, and go to state 52
    int_type         shift, and go to state 15
    bool_type        shift, and go to state 16
    float_type       shift, and go to state 17
    color_type       shift, and go to state 18
    string_as_type   shift, and go to state 19
    left_paren       shift, and go to state 53
    left_quad_brace  shift, and go to state 54
    plus             shift, and go to state 55
    minus            shift, and go to state 56
    number           shift, and go to state 57
    identifier       shift, and go to state 58
    string           shift, and go to state 59

    pine_type     go to state 31
    dot_expr      go to state 60
    ternary_expr  go to state 61
    expr          go to state 101


State 55

  131 expr: plus • expr

    logical_not      shift, and go to state 51
    bitwise_not      shift, and go to state 52
    int_type         shift, and go to state 15
    bool_type        shift, and go to state 16
    float_type       shift, and go to state 17
    color_type       shift, and go to state 18
    string_as_type   shift, and go to state 19
    left_paren       shift, and go to state 53
    left_quad_brace  shift, and go to state 54
    plus             shift, and go to state 55
    minus            shift, and go to state 56
    number           shift, and go to state 57
    identifier       shift, and go to state 58
    string           shift, and go to state 59

    pine_type     go to state 31
    dot_expr      go to state 60
    ternary_expr  go to state 61
    expr          go to state 102


State 56

  130 expr: minus • expr

    logical_not      shift, and go to state 51
    bitwise_not      shift, and go to state 52
    int_type         shift, and go to state 15
    bool_type        shift, and go to state 16
    float_type       shift, and go to state 17
    color_type       shift, and go to state 18
    string_as_type   shift, and go to state 19
    left_paren       shift, and go to state 53
    left_quad_brace  shift, and go to state 54
    plus             shift, and go to state 55
    minus            shift, and go to state 56
    number           shift, and go to state 57
    identifier       shift, and go to state 58
    string           shift, and go to state 59

    pine_type     go to state 31
    dot_expr      go to state 60
    ternary_expr  go to state 61
    expr          go to state 103


State 57

  108 expr: number •

    $default  reduce using rule 108 (expr)


State 58

   55 pine_type: identifier •
  104 ternary_expr: identifier • question_sign expr colon expr
  136 expr: identifier •

    question_sign  shift, and go to state 71

    dot       reduce using rule 55 (pine_type)
    $default  reduce using rule 136 (expr)


State 59

  109 expr: string •

    $default  reduce using rule 109 (expr)


State 60

  105 ternary_expr: dot_expr • question_sign expr colon expr
  135 expr: dot_expr •

    question_sign  shift, and go to state 84

    $default  reduce using rule 135 (expr)


State 61

  107 expr: ternary_expr •

    $default  reduce using rule 107 (expr)


State 62

   56 return_stmt_expr: return_statement expr •
  110 expr: expr • plus expr
  111     | expr • minus expr
  112     | expr • multiply expr
  113     | expr • divide expr
  114     | expr • divide_with_remind expr
  115     | expr • logical_and expr
  116     | expr • logical_or expr
  117     | expr • equals expr
  118     | expr • dont_equal expr
  119     | expr • greater_than expr
  120     | expr • lesser_than expr
  121     | expr • greater_than_or_equals expr
  122     | expr • lesser_than_or_equals expr
  123     | expr • bitwise_and expr
  124     | expr • bitwise_or expr
  125     | expr • bitwise_xor expr
  126     | expr • bitwise_shift_to_left expr
  127     | expr • bitwise_shift_to_right expr
  133     | expr • left_quad_brace expr right_quad_brace

    logical_and             shift, and go to state 104
    logical_or              shift, and go to state 105
    dont_equal              shift, and go to state 106
    bitwise_and             shift, and go to state 107
    bitwise_or              shift, and go to state 108
    bitwise_xor             shift, and go to state 109
    bitwise_shift_to_left   shift, and go to state 110
    bitwise_shift_to_right  shift, and go to state 111
    left_quad_brace         shift, and go to state 112
    equals                  shift, and go to state 113
    greater_than            shift, and go to state 114
    lesser_than             shift, and go to state 115
    plus                    shift, and go to state 116
    minus                   shift, and go to state 117
    multiply                shift, and go to state 118
    divide                  shift, and go to state 119
    divide_with_remind      shift, and go to state 120
    greater_than_or_equals  shift, and go to state 121
    lesser_than_or_equals   shift, and go to state 122

    $default  reduce using rule 56 (return_stmt_expr)


State 63

   38 while_stmt: while_statement left_paren • expr right_paren block

    logical_not      shift, and go to state 51
    bitwise_not      shift, and go to state 52
    int_type         shift, and go to state 15
    bool_type        shift, and go to state 16
    float_type       shift, and go to state 17
    color_type       shift, and go to state 18
    string_as_type   shift, and go to state 19
    left_paren       shift, and go to state 53
    left_quad_brace  shift, and go to state 54
    plus             shift, and go to state 55
    minus            shift, and go to state 56
    number           shift, and go to state 57
    identifier       shift, and go to state 58
    string           shift, and go to state 59

    pine_type     go to state 31
    dot_expr      go to state 60
    ternary_expr  go to state 61
    expr          go to state 123


State 64

   59 switch_stmt: switch_statement left_paren • expr right_paren left_brace case_list default_case right_brace

    logical_not      shift, and go to state 51
    bitwise_not      shift, and go to state 52
    int_type         shift, and go to state 15
    bool_type        shift, and go to state 16
    float_type       shift, and go to state 17
    color_type       shift, and go to state 18
    string_as_type   shift, and go to state 19
    left_paren       shift, and go to state 53
    left_quad_brace  shift, and go to state 54
    plus             shift, and go to state 55
    minus            shift, and go to state 56
    number           shift, and go to state 57
    identifier       shift, and go to state 58
    string           shift, and go to state 59

    pine_type     go to state 31
    dot_expr      go to state 60
    ternary_expr  go to state 61
    expr          go to state 124


State 65

   75 var_stmt: var identifier • assign expr
   76         | var identifier • assign call_arg_stmt

    assign  shift, and go to state 125


State 66

   77 varip_stmt: varip identifier • assign expr
   78           | varip identifier •
   79           | varip identifier • assign call_arg_stmt

    assign  shift, and go to state 126

    $default  reduce using rule 78 (varip_stmt)


State 67

   80 const_stmt: const_statement identifier • assign expr
   81           | const_statement identifier • assign call_arg_stmt

    assign  shift, and go to state 127


State 68

   82 simple_stmt: simple identifier •
   83            | simple identifier • assign expr
   84            | simple identifier • assign call_arg_stmt

    assign  shift, and go to state 128

    $default  reduce using rule 82 (simple_stmt)


State 69

   85 import_stmt: import_statement string •

    $default  reduce using rule 85 (import_stmt)


State 70

  106 ternary_expr: left_paren expr • right_paren question_sign expr colon expr
  110 expr: expr • plus expr
  111     | expr • minus expr
  112     | expr • multiply expr
  113     | expr • divide expr
  114     | expr • divide_with_remind expr
  115     | expr • logical_and expr
  116     | expr • logical_or expr
  117     | expr • equals expr
  118     | expr • dont_equal expr
  119     | expr • greater_than expr
  120     | expr • lesser_than expr
  121     | expr • greater_than_or_equals expr
  122     | expr • lesser_than_or_equals expr
  123     | expr • bitwise_and expr
  124     | expr • bitwise_or expr
  125     | expr • bitwise_xor expr
  126     | expr • bitwise_shift_to_left expr
  127     | expr • bitwise_shift_to_right expr
  133     | expr • left_quad_brace expr right_quad_brace
